Merged revisions 74696 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r74696 | mark.dickinson | 2009-09-06 22:24:55 +0100 (Sun, 06 Sep 2009) | 9 lines

  Merged revisions 74693 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r74693 | mark.dickinson | 2009-09-06 22:21:05 +0100 (Sun, 06 Sep 2009) | 2 lines

    Issue #6848:  Fix curses module build failure on OS X 10.6.
  ........
................